# Module-Rag

./: .gitignore  DEV_SPEC.md  PROJECT_HIGHLIGHTS.md  QA_TEST.md  README.md  RESUME.md  pyproject.toml  pytest.ini  text.md
config/: logging.yaml  qa-plus-broken-ingest-20260313_191634.md  qa-plus-isolated-20260313_201510.md  settings.prodlike.20260310_131946.real.yaml  settings.prodlike.20260310_132013.real.yaml  settings.prodlike.20260310_132457.real.yaml  settings.resume.bench.yaml  settings.yaml
config/strategies/: local.alt.yaml  local.cross_encoder.yaml  local.default.yaml  local.production_like.yaml  local.production_like_cross_encoder.yaml  local.production_like_deepseek.yaml  local.test.yaml
interview-report/: interview_report_20260318_212406.md  interview_report_20260318_230050.md
scripts/: bootstrap_local.sh  dev_dashboard.sh  dev_eval.sh  dev_ingest.sh  dev_query.sh  diag_real_embedding.py  diff_golden.sh  make_golden.sh  module-rag-mcp  qa_run.py
skills/dev-spec-highlights/: SKILL.md
skills/interview-prep/: SKILL.md
skills/qa-baseline/: SKILL.md
skills/qa-test-plus/: QA_TEST_PLUS.md  QA_TEST_PLUS_PROGRESS.md  SKILL.md
skills/resume-writer-rag/: SKILL.md
src/: __init__.py
src/core/: __init__.py
src/ingestion/: __init__.py  errors.py  pipeline.py
src/libs/: __init__.py  registry.py
src/mcp_server/: __init__.py  _test_entrypoint.py  _test_mcp_admin_entrypoint.py  _test_mcp_assets_entrypoint.py  _test_mcp_entrypoint.py  cli.py  entry.py  (+3 more)
tests/: conftest.py
web/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
(+273 files in other folders)
